--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/xebia/innovation-gh-visualizer#readme",
   "dependencies": {
-    "@google-cloud/bigquery": "^1.0.0"
+    "@google-cloud/bigquery": "^1.0.0",
+    "moment": "^2.20.1"
   }
 }
