--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
   "homepage": "https://github.com/xebia/innovation-gh-visualizer#readme",
   "dependencies": {
     "@google-cloud/bigquery": "^1.0.0",
+    "debug": "^3.1.0",
     "moment": "^2.20.1",
-    "node-fetch": "^2.0.0"
+    "node-fetch": "^2.0.0",
+    "yargs": "^11.0.0"
   }
 }
