--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/xebia/innovation-gh-visualizer#readme",
   "dependencies": {
     "@google-cloud/bigquery": "^1.0.0",
+    "chalk": "^2.3.0",
     "debug": "^3.1.0",
     "moment": "^2.20.1",
     "node-fetch": "^2.0.0",
