--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
     "moment": "^2.20.1",
+    "node-couchdb": "^1.2.0",
     "node-fetch": "^2.0.0",
     "yargs": "^11.0.0"
   }
