--- a/pouch-frontend/package.json
+++ b/pouch-frontend/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "micro-proxy -r rules.json -p 9001 & next",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "JSONStream": "^1.3.2",
+    "jsonparse": "^1.3.1",
     "micro-proxy": "^1.1.0",
     "next": "^5.0.0",
+    "oboe": "^2.1.4",
     "pouchdb": "^6.4.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
