--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,13 @@
     "node-couchdb": "^1.2.0",
     "node-fetch": "^2.0.0",
     "yargs": "^11.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "prettier": "^1.10.2"
   }
 }
